# mkdocs-drawio-url

./: README.md  pyproject.toml
mkdocs_drawio_url/: plugin.py
