[tool.poetry]
name = "mkdocs-drawio-url"
version = "1.0.1"
description = "MkDocs plugin for displaying draw io file with url"
authors = [
    "Sergey Lukin <onixpro@gmail.com>",
    "Jan Larwig <jan@larwig.com>",
    "sylvain121 <sylvain121@gmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sylvain121/mkdocs-drawio-url/"
homepage = "https://github.com/sylvain121/mkdocs-drawio-url/"
keywords = [
    "mkdocs", "plugin", "markdown", "drawio"
]
packages = [
    { include = "mkdocs_drawio_url/plugin.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.0"
Jinja2 = ">=3.0"
beautifulsoup4 = ">=4.0"
lxml = ">=4.0"
mkdocs = ">=1.3"

[tool.poetry.dev-dependencies]
black = ">=24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
drawio-url = 'mkdocs_drawio_url.plugin:DrawioPlugin'
